integrated api with client

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,8 +67,8 @@ body {
       font-weight: 700;
       color: $primary-color;
     }
-    .input-group {
-      margin:15px 0;
-    }
+      // .col {
+      //   margin:20px 0;
+      // }
   }
 }
