--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,74 +1,194 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins&display=swap");
 
+// font-family: 'Nunito Sans', sans-serif;
+// font-family: 'Poppins', sans-serif;
+
 $primary-color: #071a84;
+$secondary-color: #eaecf6;
 body {
   font-family: "Poppins", sans-serif;
-}
-
-.Home {
-  .left-side {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $primary-color;
-    min-height: 100vh;
+  font-size: 14px !important;
+  input[disabled],
+  select[disabled],
+  textarea[disabled] {
+    background-color: rgba(231, 238, 247, 0.384) !important;
   }
-
-  .right-side {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    min-height: 100vh;
-    .title {
-      text-transform: uppercase;
-      font-size: 30px;
-      font-weight: bold;
-      color: $primary-color;
-    }
-    .inputField {
-      max-width: 400px;
-      text-align: center;
-    }
-    button{
-      min-width: 200px;
-      margin: 0 10px;
-    }
-  }
-
-  @media (max-width: 768px) {
-    & {
-      padding: 10px;
-    }
+  .Home {
     .left-side {
-      display: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $primary-color;
+      min-height: 100vh;
     }
+
     .right-side {
-      justify-content: flex-start;
-      margin-top: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+      .title {
+        text-transform: uppercase;
+        font-size: 30px;
+        font-weight: bold;
+        color: $primary-color;
+      }
+      .inputField {
+        max-width: 400px;
+        text-align: center;
+      }
+      button {
+        min-width: 200px;
+        margin: 0 10px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      & {
+        padding: 10px;
+      }
+      .left-side {
+        display: none;
+      }
+      .right-side {
+        justify-content: flex-start;
+        margin-top: 50px;
+      }
     }
   }
-}
 
-.Register {
-  min-height: 100vh;
-  background-image: linear-gradient(90deg, #071a84, #314dea);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .card {
-    min-height: 50vh;
-    max-width: 756px;
-    width:100%;
-    padding: 10px;
-    border-radius: 10px;
-    .title {
-      font-size: 30px;
-      font-weight: 700;
-      color: $primary-color;
+  .Register {
+    min-height: 100vh;
+    background-image: linear-gradient(90deg, #071a84, #314dea);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .card {
+      min-height: 50vh;
+      max-width: 756px;
+      width: 100%;
+      padding: 10px;
+      border-radius: 10px;
+      .title {
+        font-size: 30px;
+        font-weight: 700;
+        color: $primary-color;
+      }
     }
-      // .col {
-      //   margin:20px 0;
-      // }
+  }
+  footer {
+    padding: 30px 0;
+    color: $primary-color;
+    text-align: center !important;
+    width: 100% !important;
+    background-color: $secondary-color;
+  }
+  .Dashboard {
+    background-color: $secondary-color;
+    min-height: 100vh;
+    padding-top: 50px;
+    .navbar {
+      background-color: $primary-color;
+      .title {
+        font-size: 22px !important;
+      }
+      .nav-link {
+        font-size: 14px;
+        padding: 10px 20px;
+      }
+    }
+
+    // profile page
+    .profile {
+      margin-top: 50px;
+
+      .heading {
+        font-size: 16px;
+        font-weight: bold;
+        margin-left: 10px;
+        .message {
+          font-size: 12px !important;
+          color: rgba(3, 11, 71, 0.47);
+        }
+      }
+      .sub-heading {
+        font-size: 16px;
+        font-weight: bold;
+        color: $primary-color;
+      }
+      .profile-banner {
+        margin-bottom: 30px;
+        .profileImage {
+          width: 100px;
+          height: 100px;
+          border-radius: 10px;
+          margin: 0 10px;
+        }
+        button {
+          min-width: 150px !important;
+          border-radius: 25px;
+          margin: 10px;
+        }
+      }
+      .personal-details {
+        margin-top: 30px;
+        .label {
+          color: $primary-color;
+        }
+      }
+      .educational-details {
+        margin-top: 50px;
+      }
+      .Skills {
+        margin-top: 50px;
+        .skill {
+          display: flex;
+          justify-content: space-between;
+          align-items: baseline;
+          margin-bottom: 10px;
+          .skillVal {
+            max-width: 120px;
+          }
+        }
+      }
+    }
+
+    // updates
+    .Notifications {
+      padding-top: 50px;
+      .notifier {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        background-color: #fff;
+        min-height: 80px;
+        border-radius: 10px;
+        margin: 20px 0;
+        .notifier-typo {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 60px;
+          height: 80px;
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+        }
+        .notifier-body {
+          display: flex;
+          flex-direction: column;
+          align-items: start;
+          justify-content: center;
+          margin: 0 20px;
+          .title {
+            font-size: 16px;
+            font-weight: 600;
+          }
+          .description {
+            font-family: "Nunito Sans", sans-serif;
+          }
+        }
+      }
+    }
   }
 }
