added skills and social links

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,6 +182,12 @@ body {
       }
       .SocialMedia{
         margin-top: 50px;
+        .linkField{
+          margin:10px 0;
+          i{
+            margin-right:10px
+          }
+        }
       }
     }
 
