--- a/src/styles.scss
+++ b/src/styles.scss
@@ -180,7 +180,7 @@ body {
           }
         }
       }
-      .SocialMedia {
+      .SocialMedia, .Hobbies {
         margin-top: 50px;
         .linkField{
           margin:10px 0;
