--- a/src/styles.scss
+++ b/src/styles.scss
@@ -292,7 +292,7 @@ body {
     background-color: $secondary-color;
     min-height: 100vh;
     .left-side {
-      background-color: $primary-color;
+      background-color: #414141;
       min-height: 100vh;
       color: #fff;
       padding: 40px;
@@ -318,7 +318,7 @@ body {
       .title {
         font-family: "Bebas Neue", cursive;
         font-size: 32px;
-        color: $primary-color;
+        color: #414141;
         margin:0;
       }
     }
