--- a/src/styles.scss
+++ b/src/styles.scss
@@ -211,35 +211,36 @@ body {
     .Notifications {
       padding-top: 50px;
       .notifier {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
         background-color: #fff;
         min-height: 80px;
         border-radius: 10px;
         margin: 20px 0;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        box-shadow: #959da533 0px 8px 24px;
         .notifier-typo {
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 60px;
-          height: 80px;
+          min-height: 80px;
+          height: 100%;
           border-top-left-radius: 10px;
           border-bottom-left-radius: 10px;
         }
         .notifier-body {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          justify-content: center;
-          margin: 0 20px;
+          height: auto;
           .title {
             font-size: 14px;
             font-weight: 600;
           }
           .description {
-            font-family: "Nunito Sans", sans-serif;
+            font-size: 14px;
+            color: grey;
+            font-family: "Nunito", sans-serif;
+          }
+          p {
+            margin: 5px 0px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
           }
         }
       }
@@ -319,7 +320,7 @@ body {
         font-family: "Bebas Neue", cursive;
         font-size: 32px;
         color: #414141;
-        margin:0;
+        margin: 0;
       }
     }
   }
@@ -334,9 +335,9 @@ body {
     p {
       font-weight: bold;
       font-size: 30px;
-      font-family: "Nunito Sans", sans-serif;
+      font-family: "Nunito", sans-serif;
     }
   }
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap&&family=Nunito&display=swap ");
