--- a/src/styles.scss
+++ b/src/styles.scss
@@ -366,15 +366,15 @@ body {
       justify-content: space-between;
       align-items: center;
       margin-bottom: 30px;
-      .header-left {
-        img{
+      .header-right {
+        img {
           width: 100px;
           height: 100px;
           border-radius: 10%;
           box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         }
       }
-      .header-right {
+      .header-left {
         .user-name {
           font-size: 28px;
           font-weight: 600;
@@ -385,19 +385,22 @@ body {
         }
         p {
           margin: 5px 0;
-          text-align: right;
+          color: $secondary-color;
         }
       }
     }
     main {
       margin-top: 30px;
       .section {
-        margin-bottom: 30px;
+        margin-bottom: 50px;
         .heading {
           font-size: 16px;
           font-weight: 600;
           color: $text-color;
           text-transform: uppercase;
+          @media (max-width: 768px) {
+            text-decoration: underline;
+          }
         }
         .description {
           color: $secondary-color;
