--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,23 @@ body {
   textarea[disabled] {
     background-color: #3c485207 !important;
   }
+  input,
+  select,
+  textarea {
+    &:focus {
+      outline: none !important;
+      box-shadow: 0 0 2px 2px #6b818b85 !important;
+      border: 1px solid #ced4da !important;
+    }
+  }
+  .accordion-button:focus {
+    box-shadow: 0 0 1px 2px #6b818b85 !important;
+    background-color: rgb(250, 250, 250);
+  }
+  .accordion-button:not(.collapsed) {
+    box-shadow: 0 0 1px 2px #6b818b85 !important;
+    background-color: rgb(250, 250, 250);
+  }
   .btn {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
