--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,30 +16,45 @@ body {
   font-family: "Averta Std", sans-serif;
   font-size: 14px !important;
   color: $text-color;
-  input[disabled],
-  select[disabled],
-  textarea[disabled] {
-    background-color: #3c485207 !important;
-  }
   input,
-  select,
-  textarea {
-    &:focus {
-      outline: none !important;
-      box-shadow: 0 0 2px 2px #6b818b85 !important;
-      border: 1px solid #ced4da !important;
+    select,
+    textarea {
+      min-height: 50px;
+      background-color: #fff !important;
+      border: none !important;
+      color: $secondary-color !important;
+      &[disabled] {
+        background-color: #f3f5fabb !important;
+      }
+      &:focus {
+        outline: none !important;
+        box-shadow: none !important;
+      }
+    }
+  .input-group {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 4px 12px;
+    border-radius: 10px;
+    .input-group-text {
+      background-color: #fff !important;
+      border: none !important;
+      color: $secondary-color !important;
+      border-bottom-left-radius: 10px;
+      border-top-left-radius: 10px;
     }
   }
   .accordion-button:focus {
     box-shadow: 0 0 1px 2px #6b818b85 !important;
     background-color: rgb(250, 250, 250);
+    color: $text-color;
   }
   .accordion-button:not(.collapsed) {
     box-shadow: 0 0 1px 2px #6b818b85 !important;
     background-color: rgb(250, 250, 250);
   }
+
   .btn {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 10px;
   }
   .btn-primary {
     background-color: $text-color;
